--- a/Medical/res/values/strings.xml
+++ b/Medical/res/values/strings.xml
@@ -5,12 +5,19 @@
     <string name="app_name">智能医疗</string>
     
     <!-- 个人 -->
+    <string name="login">登陆</string>
+    <string name="register">注册</string>
+    <string name="reset_password">重置密码</string>
+    <string name="personal_center">个人中心</string>
+    <string name="edit_personal">修改资料</string>
+    <string name="change_password">修改密码</string>
     
     <!-- 挂号 -->
     
     <!-- 取单 -->
     
     <!-- 导航 -->
+    <string name="navigation">导航</string>
     
     <!-- 科室医生 -->
     
