--- a/Medical/res/values/strings.xml
+++ b/Medical/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="autocodeemptytip">验证码不能为空</string>
     <string name="twopwddifftip">二次密码输入不一致</string>
     <string name="usernameorpassworderrortip">用户名或密码有误</string>
+    <string name="changepasswordsuccess">修改密码成功</string>
     
     <!-- 挂号 -->
     
