--- a/Medical/res/values/strings.xml
+++ b/Medical/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="app_name">彭卫医疗</string>
     
     <!-- 个人 -->
+    <string name="collection">收藏</string>
+    <string name="message">消息</string>
     <string name="login">登陆</string>
     <string name="register">注册</string>
     <string name="reset_password">重置密码</string>
